--- a/b.html
+++ b/b.html
@@ -11,7 +11,7 @@
 <p>Today is Friday and the date is 09/11. Long time ago in this day a massive thing happed in NW. From that day this Friday is called BLACK FRIDAY </p>
 
 
-<a href = "https://morshad098.github.io/a.html">Go to page 1</a>
+<a href = "https://morshad098.github.io/index.html">Go to page 1</a>
 
 </body>
 
